# FL-Deployment

./: .gitignore  README.md  copy_partitions.py  generate_dataset.py
datasets/cifar10/2_partitions/cifar10_part_1/test/: state.json
datasets/cifar10/2_partitions/cifar10_part_1/train/: state.json
datasets/cifar10/2_partitions/cifar10_part_2/test/: state.json
datasets/cifar10/2_partitions/cifar10_part_2/train/: state.json
flare/test/: docker_compose_requirements.txt  project.yml
flare/test/workspace/multi-node/: project.yml
flower/: Dockerfile  docker-compose.yml
flower/dataset/fashionmnist_part_2/test/: data-00000-of-00001.arrow
flower/model/: model.py
flower/multi-node/: README.md  docker-compose.yml
flower/multi-node/client/: .env  Dockerfile  README.md  client_app.py  docker-compose.yml  entrypoint.sh  requirements.txt
flower/multi-node/client/config/: grafana.ini  prometheus.yml
flower/multi-node/client/model_dnn/: model.py
flower/multi-node/model/: model.py
flower/multi-node/server/: .env  Dockerfile  README.md  client_app.py  docker-compose.yml  pyproject.toml  server_app.py
flower/multi-node/server/config/: prometheus.yml
flower/multi-node/server/model_resnet18/: model.py
flower/single-node/: .env  Dockerfile.client  Dockerfile.server  README.md  client_app.py  client_entrypoint.sh  docker-compose.clients.yml  docker-compose.yml  generate_client_compose.sh  pyproject.toml  requirements.txt  run.sh  server_app.py  server_entrypoint.sh
flower/single-node/config/: prometheus.yml
models/: cnn.py  dnn.py  resnet18.py
(+292 files in other folders)
